# 4IR-backend-project-summit

./: .env.example  .gitignore  README.md  app.py  demo_workflow.py  flask_server.py  main.py  pyproject.toml  requirements.txt  setup.py  simulate_validation_output.py  test_complete_validation_workflow.py  test_complete_workflow.py  test_full_simulation.py  test_mock_workflow.py  test_rag_integration.py
docs/: CLEAN_ARCHITECTURE.md
examples/: frontend_integration_example.py
src/: __init__.py  api_server.py  app.py  utils.py
src/constants/: __init__.py
src/controllers/: __init__.py  image_controller.py  rag_controller.py  user_controller.py  validation_controller.py
src/dto/: __init__.py
src/exceptions/: __init__.py
src/interfaces/: __init__.py
src/middlewares/: __init__.py
src/models/: __init__.py  user.py
src/repositories/: __init__.py  user_repository.py
src/services/: __init__.py  llm_service.py  pdf_generation_service.py  query_formatter_service.py  rag_service.py  user_service.py  validation_response_formatter_service.py  validation_service.py
tests/: conftest.py  test_app.py  test_clean_architecture.py  test_image_processing.py  test_image_simple.py  test_integration.py  test_utils.py
